<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioButton
        android:id="@+id/radioButton7"
        android:layout_width="28dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="203dp"
        tools:layout_editor_absoluteY="108dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/murmay_text"
        android:textColor="#120F0F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="176dp"
        android:text="@string/zavtrak_text"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="148dp"
        android:text="@string/kategorii_text"
        android:textColor="#120F0F"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

    </TextView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="127dp"
        android:layout_height="119dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/kofe_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hth"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="145dp"
        android:layout_height="115dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hg2"
        android:contentDescription="@string/sladosti_img" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="128dp"
        android:layout_height="133dp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/hg3"
        android:contentDescription="@string/tea_img" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="36dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/hg4"
        android:contentDescription="@string/poloski_img" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="142dp"
        android:layout_height="139dp"
        android:contentDescription="@string/kombo_img"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/hg5"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="3dp"
        android:text="@string/kofe_text"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/sladosti_text"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="@string/tea_text"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:text="@string/kombo_text"
        app:layout_constraintEnd_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <Button
        android:id="@+id/button"
        android:layout_width="248dp"
        android:layout_height="48dp"
        android:layout_marginBottom="248dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/rezult_text"
        android:textAllCaps="false"
        android:textColor="#FAFAFA"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" >

    </Button>

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="28dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="108dp" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="28dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="250dp" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="28dp"
        android:layout_height="20dp"
        tools:layout_editor_absoluteX="207dp"
        tools:layout_editor_absoluteY="243dp" />

</androidx.constraintlayout.widget.ConstraintLayout>